# Vee

./: .hgignore  CMakeLists.txt  README.rst
interfaces/: com.trolltech.Qt.QWebView.xml  org.vee.VeeView.xml  org.vee.VeeWebView.xml  org.vee.View.xml  org.vee.WebView.xml  org.vee.web.VeeWebView.xml  org.vee.web.View.xml
src/vee-common/: common_constants.h
src/vee-frontend/: CMakeLists.txt  blank_view.cpp  blank_view.h  blank_view_builder.cpp  blank_view_builder.h  command_line_parser.cpp  command_line_parser.h  constants.h  embed_command.cpp  embed_command.h  embedcommand.cpp  embedcommand.h  embedcontainer.cpp  embedcontainer.h  embedtabs.cpp  embedtabs.h  error_view.cpp  error_view.h  input_bar.cpp  input_bar.h  local_view.h  main.cpp  main_window.cpp  main_window.h  mainwindow.cpp  mainwindow.h  process.h  process_builder.h  remote_view.cpp  remote_view.h  remote_view_builder.cpp  remote_view_builder.h  vee.qrc  vee_blank_view.cpp  vee_blank_view.h  vee_local_view.h  vee_view_command.h  vee_view_interface.cpp  vee_view_interface.h  vee_view_remote_interface.cpp  (+28 more)
src/vee-frontend/stylesheets/: vee.css
src/vee-web/: CMakeLists.txt  command_line_parser.cpp  command_line_parser.h  commandline.cpp  commandline.h  constants.h  dbus_manager.cpp  dbus_manager.h  main.cpp  vee_web_service.cpp  vee_web_service.h  vee_web_service_adaptor.cpp  vee_web_service_adaptor.h  vee_web_service_builder.cpp  vee_web_service_builder.h  vee_web_view.cpp  vee_web_view.h  vee_web_view_adaptor_impl.cpp  vee_web_view_adaptor_impl.h  view.cpp  view_adaptor_impl.cpp  view_adaptor_impl.h  web_view_proxy.cpp  web_view_proxy.h  web_view_proxy_adaptor.cpp  web_view_proxy_adaptor.h  web_view_proxy_builder.cpp  web_view_proxy_builder.h  widget_builder.cpp  widget_builder.h
tests/: CMakeLists.txt
tests/vee-frontend/: CMakeLists.txt  dummy_process.cpp  dummy_process.h  dummy_process_builder.cpp  dummy_process_builder.h  dummy_remote_web_view.cpp  dummy_remote_web_view.h  dummy_remote_web_view_adaptor.cpp  dummy_remote_web_view_adaptor.h  dummy_view.cpp  dummy_view.h  dummy_view_builder.cpp  dummy_view_builder.h  test_blank_view.cpp  test_blank_view_builder.cpp  test_command_line_parser.cpp  test_embed_command.cpp  test_view_resolver.cpp  test_view_tab.cpp  test_vim.cpp  test_web_view.cpp  test_web_view_builder.cpp
tests/vee-web/: CMakeLists.txt  test_command_line_parser.cpp  test_dbus_manager.cpp  test_vee_web_service_adaptor.cpp  test_vee_web_service_file.cpp  test_vee_web_service_url.cpp  test_vee_web_view_adaptor_impl.cpp  test_vee_web_view_file.cpp  test_vee_web_view_url.cpp  test_view_file.cpp  test_view_url.cpp  test_web_view_proxy_adaptor.cpp  test_web_view_proxy_file.cpp  test_web_view_proxy_url.cpp
vee-frontend/: CMakeLists.txt
vee-frontend/src/: CMakeLists.txt  embedcontainer.cpp  embedcontainer.h  embedtabs.cpp  embedtabs.h  main.cpp  mainwindow.cpp  mainwindow.h
vee-frontend/src/src/: vee
vee-web/: CMakeLists.txt
vee-web/src/: CMakeLists.txt  main.cpp  qwebviewadaptor.cpp  qwebviewadaptor.h  view.cpp  view.h
